# ai-multi-agent-financial-risk-assistant

./: .gitignore  README.md  main.py  pyproject.toml
agents/: compliance_agent.py  conformite_agent.py  evaluator_agent.py  financial_agent.py  human_validation_agent.py  supervisor.py
config/: llm.py
data/clients/: clients_historique.csv
graph/: state.py  workflow.py
prompts/: conformite.txt  evaluator.txt  financial.txt
tools/: client_data_tool.py  conformite_retriever.py  human_validation_tool.py  procedure_retriever.py  prompt_loader.py  rag_vectorstore.py
ui/: app.py  application.py
vectorstores/conformite/: store.json
vectorstores/procedures/: store.json
