[project]
name = "ai-multi-agent-financial-risk-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.10",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
